force-app/main/default/objects/Channel_Partner__c/fields/Aadhar_Document_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Document_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set to true once at least one Aadhar Card document has been uploaded for this Channel Partner.</inlineHelpText>
    <label>Aadhar Document Uploaded</label>
    <type>Checkbox</type>
</CustomField>