force-app/main/default/objects/Channel_Partner__c/fields/Active_user__c.field-meta.xml
<CustomField>
    <fullName>Active_user__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active user</label>
    <type>Checkbox</type>
</CustomField>