force-app/main/default/objects/Channel_Partner__c/fields/Address_Proof_Document_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Address_Proof_Document_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set to true once an Address Proof document has been uploaded for this Channel Partner.</inlineHelpText>
    <label>Address Proof Document Uploaded</label>
    <type>Checkbox</type>
</CustomField>