force-app/main/default/objects/Channel_Partner__c/fields/Alternate_No__c.field-meta.xml
<CustomField>
    <fullName>Alternate_No__c</fullName>
    <label>Alternate No</label>
    <type>Phone</type>
</CustomField>