force-app/main/default/objects/Channel_Partner__c/fields/Are_you_GST_Registered__c.field-meta.xml
<CustomField>
    <fullName>Are_you_GST_Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are you GST Registered</label>
    <type>Checkbox</type>
</CustomField>