force-app/main/default/objects/Channel_Partner__c/fields/Authorization_Letter_Document_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Letter_Document_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set to true once an Authorization Letter document has been uploaded for this Channel Partner.</inlineHelpText>
    <label>Authorization Letter Document Uploaded</label>
    <type>Checkbox</type>
</CustomField>