force-app/main/default/objects/Channel_Partner__c/fields/Avg_ticket_size_in_primary_sales__c.field-meta.xml
<CustomField>
    <fullName>Avg_ticket_size_in_primary_sales__c</fullName>
    <label>Avg ticket size in primary sales</label>
    <length>255</length>
    <type>Text</type>
</CustomField>