force-app/main/default/objects/Channel_Partner__c/fields/Board_Resolution_Document_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Board_Resolution_Document_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set to true once a Board Resolution document has been uploaded for this Channel Partner.</inlineHelpText>
    <label>Board Resolution Document Uploaded</label>
    <type>Checkbox</type>
</CustomField>