force-app/main/default/objects/Channel_Partner__c/fields/Cancel_Cheque_Document_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Cheque_Document_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set to true once a Cancel Cheque document has been uploaded for this Channel Partner.</inlineHelpText>
    <label>Cancel Cheque Document Uploaded</label>
    <type>Checkbox</type>
</CustomField>