force-app/main/default/objects/Channel_Partner__c/fields/Capacity_to_do_high_end_sales__c.field-meta.xml
<CustomField>
    <fullName>Capacity_to_do_high_end_sales__c</fullName>
    <label>Capacity to do high end sales</label>
    <length>255</length>
    <type>Text</type>
</CustomField>