force-app/main/default/objects/Channel_Partner__c/fields/ChangePasswordEamil__c.field-meta.xml
<CustomField>
    <fullName>ChangePasswordEamil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ChangePasswordEamil</label>
    <type>Checkbox</type>
</CustomField>