force-app/main/default/objects/Channel_Partner__c/fields/Cheque_Given__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Given__c</fullName>
    <label>Cheque Given</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>