force-app/main/default/objects/Channel_Partner__c/fields/City_of_presence__c.field-meta.xml
<CustomField>
    <fullName>City_of_presence__c</fullName>
    <label>City of presence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>