force-app/main/default/objects/Channel_Partner__c/fields/City_of_Primary_Work__c.field-meta.xml
<CustomField>
    <fullName>City_of_Primary_Work__c</fullName>
    <label>City of Primary Work</label>
    <type>TextArea</type>
</CustomField>