force-app/main/default/objects/Channel_Partner__c/fields/Company_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Company_Declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Declaration</label>
    <type>Checkbox</type>
</CustomField>