force-app/main/default/objects/Channel_Partner__c/fields/Company_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Company_Phone_No__c</fullName>
    <label>Company Phone No</label>
    <type>Phone</type>
</CustomField>