force-app/main/default/objects/Channel_Partner__c/fields/Company_Registration_Document_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Company_Registration_Document_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set to true once a Company Registration document has been uploaded for this Channel Partner.</inlineHelpText>
    <label>Company Registration Document Uploaded</label>
    <type>Checkbox</type>
</CustomField>