force-app/main/default/objects/Channel_Partner__c/fields/Consent_Source__c.field-meta.xml
<CustomField>
    <fullName>Consent_Source__c</fullName>
    <label>Consent Source</label>
    <length>244</length>
    <type>Text</type>
</CustomField>