force-app/main/default/objects/Channel_Partner__c/fields/CP_Calling__c.field-meta.xml
<CustomField>
    <fullName>CP_Calling__c</fullName>
    <label>CP Calling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>