force-app/main/default/objects/Channel_Partner__c/fields/CP_Category__c.field-meta.xml
<CustomField>
    <fullName>CP_Category__c</fullName>
    <label>CP Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
            <value>
                <fullName>P5</fullName>
            </value>
            <value>
                <fullName>P6</fullName>
            </value>
            <value>
                <fullName>P7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>