force-app/main/default/objects/Channel_Partner__c/fields/CP_Demographic__c.field-meta.xml
<CustomField>
    <fullName>CP_Demographic__c</fullName>
    <label>CP Demographic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>