force-app/main/default/objects/Channel_Partner__c/fields/CP_Met_Date__c.field-meta.xml
<CustomField>
    <fullName>CP_Met_Date__c</fullName>
    <label>CP Met Date</label>
    <type>Date</type>
</CustomField>