force-app/main/default/objects/Channel_Partner__c/fields/CP_RM_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>CP_RM_Email_ID__c</fullName>
    <label>CP RM Email ID</label>
    <type>Email</type>
</CustomField>