force-app/main/default/objects/Channel_Partner__c/fields/CP_RM_Name__c.field-meta.xml
<CustomField>
    <fullName>CP_RM_Name__c</fullName>
    <label>CP RM Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>