force-app/main/default/objects/Channel_Partner__c/fields/CP_Suggestion__c.field-meta.xml
<CustomField>
    <fullName>CP_Suggestion__c</fullName>
    <label>CP Suggestion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>