force-app/main/default/objects/Channel_Partner__c/fields/CP_Unique_Code__c.field-meta.xml
<CustomField>
    <fullName>CP_Unique_Code__c</fullName>
    <displayFormat>ZCP-{0000}</displayFormat>
    <label>CP Unique Code</label>
    <type>AutoNumber</type>
</CustomField>