force-app/main/default/objects/Channel_Partner__c/fields/CP_Visited_Project__c.field-meta.xml
<CustomField>
    <fullName>CP_Visited_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CP Visited Project</label>
    <type>Checkbox</type>
</CustomField>