force-app/main/default/objects/Channel_Partner__c/fields/Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Status__c</fullName>
    <formula>&quot;Pending Documents: &quot; &amp;

TEXT(
IF(GST_Document_Uploaded__c = false,1,0) +

IF(PAN_Document_Uploaded__c = false,1,0) +

IF(RERA_Document_Uploaded__c = false,1,0) +

IF(Aadhar_Document_Uploaded__c = false,1,0) +

IF(Address_Proof_Document_Uploaded__c = false,1,0) +

IF(Cancel_Cheque_Document_Uploaded__c = false,1,0) +

IF(
ISPICKVAL(Entity_Type__c , &quot;Company&quot;),
IF(Company_Registration_Document_Uploaded__c = false,1,0),
0
) +

IF(
ISPICKVAL(Entity_Type__c , &quot;Company&quot;),
IF(
AND(
Authorization_Letter_Document_Uploaded__c = false,
Board_Resolution_Document_Uploaded__c = false
),
1,
0
),
0
)
)

&amp;

&quot; | Completed Documents: &quot; &amp;

TEXT(

IF(GST_Document_Uploaded__c = true,1,0) +

IF(PAN_Document_Uploaded__c = true,1,0) +

IF(RERA_Document_Uploaded__c = true,1,0) +

IF(Aadhar_Document_Uploaded__c = true,1,0) +

IF(Address_Proof_Document_Uploaded__c = true,1,0) +

IF(Cancel_Cheque_Document_Uploaded__c = true,1,0) +

IF(
ISPICKVAL(Entity_Type__c , &quot;Company&quot;),
IF(Company_Registration_Document_Uploaded__c = true,1,0),
0
) +

IF(
ISPICKVAL(Entity_Type__c , &quot;Company&quot;),
IF(
OR(
Authorization_Letter_Document_Uploaded__c = true,
Board_Resolution_Document_Uploaded__c = true
),
1,
0
),
0
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Status</label>
    <type>Text</type>
</CustomField>