force-app/main/default/objects/Channel_Partner__c/fields/First_Booking_Closed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Booking_Closed_Date_Time__c</fullName>
    <label>First Booking Closed Date/Time</label>
    <type>DateTime</type>
</CustomField>