force-app/main/default/objects/Channel_Partner__c/fields/First_Follow_Up_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Follow_Up_Date_Time__c</fullName>
    <label>First Follow Up Date/Time</label>
    <type>DateTime</type>
</CustomField>