force-app/main/default/objects/Channel_Partner__c/fields/First_Lead_Captured_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Lead_Captured_Date_Time__c</fullName>
    <label>First Lead Captured Date/Time</label>
    <type>DateTime</type>
</CustomField>