force-app/main/default/objects/Channel_Partner__c/fields/GST_Document_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>GST_Document_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set to true once at least one GST Certificate document has been uploaded for this Channel Partner.</inlineHelpText>
    <label>GST Document Uploaded</label>
    <type>Checkbox</type>
</CustomField>