force-app/main/default/objects/Channel_Partner__c/fields/Indivisual_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Indivisual_Declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indivisual Declaration</label>
    <type>Checkbox</type>
</CustomField>