force-app/main/default/objects/Channel_Partner__c/fields/Last_Lead_Captured_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Lead_Captured_Date_Time__c</fullName>
    <label>Last Lead Captured Date/Time</label>
    <type>DateTime</type>
</CustomField>