force-app/main/default/objects/Channel_Partner__c/fields/Last_Logged_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Logged_Time__c</fullName>
    <label>Last Logged In Time</label>
    <type>DateTime</type>
</CustomField>