force-app/main/default/objects/Channel_Partner__c/fields/Met_Location__c.field-meta.xml
<CustomField>
    <fullName>Met_Location__c</fullName>
    <label>Met Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>