force-app/main/default/objects/Channel_Partner__c/fields/Mobile_APP_login_Time__c.field-meta.xml
<CustomField>
    <fullName>Mobile_APP_login_Time__c</fullName>
    <label>For First Login Time</label>
    <type>DateTime</type>
</CustomField>