force-app/main/default/objects/Channel_Partner__c/fields/Mobile_Number_With_CC__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number_With_CC__c</fullName>
    <formula>IF(
NOT(ISBLANK(Mobile_Number__c)),
&quot;91&quot; &amp; Mobile_Number__c,null

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Number With CC</label>
    <type>Text</type>
</CustomField>