force-app/main/default/objects/Channel_Partner__c/fields/No_Of_Enquries__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Enquries__c</fullName>
    <label>No Of Enquries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>