force-app/main/default/objects/Channel_Partner__c/fields/PAN_Document_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>PAN_Document_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set to true once at least one PAN Card document has been uploaded for this Channel Partner.</inlineHelpText>
    <label>PAN Document Uploaded</label>
    <type>Checkbox</type>
</CustomField>