force-app/main/default/objects/Channel_Partner__c/fields/Pending_Document__c.field-meta.xml
<CustomField>
    <fullName>Pending_Document__c</fullName>
    <formula>IF(
ISPICKVAL(Entity_Type__c , &quot;Company&quot;),

IF(GST_Document_Uploaded__c = false,&quot;GST Certificate, &quot;,&quot;&quot;)&amp;
IF(PAN_Document_Uploaded__c = false,&quot;PAN Card, &quot;,&quot;&quot;)&amp;
IF(RERA_Document_Uploaded__c = false,&quot;RERA Certificate, &quot;,&quot;&quot;)&amp;
IF(Aadhar_Document_Uploaded__c = false,&quot;Aadhar Card, &quot;,&quot;&quot;)&amp;
IF(Address_Proof_Document_Uploaded__c = false,&quot;Address Proof, &quot;,&quot;&quot;)&amp;
IF(Cancel_Cheque_Document_Uploaded__c = false,&quot;Cancel Cheque, &quot;,&quot;&quot;)&amp;
IF(Company_Registration_Document_Uploaded__c = false,&quot;Company Registration, &quot;,&quot;&quot;)&amp;
IF(AND(Authorization_Letter_Document_Uploaded__c = false,Board_Resolution_Document_Uploaded__c = false),&quot;Authorization Letter / Board Resolution, &quot;,&quot;&quot;),


IF(
GST_Document_Uploaded__c = false,
&quot;GST Certificate, &quot;,
&quot;&quot;
)

&amp;

IF(
PAN_Document_Uploaded__c = false,
&quot;PAN Card, &quot;,
&quot;&quot;
)

&amp;

IF(
RERA_Document_Uploaded__c = false,
&quot;RERA Certificate, &quot;,
&quot;&quot;
)

&amp;

IF(
Aadhar_Document_Uploaded__c = false,
&quot;Aadhar Card, &quot;,
&quot;&quot;
)

&amp;

IF(
Address_Proof_Document_Uploaded__c = false,
&quot;Address Proof, &quot;,
&quot;&quot;
)

&amp;

IF(
Cancel_Cheque_Document_Uploaded__c = false,
&quot;Cancel Cheque, &quot;,
&quot;&quot;
)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Document</label>
    <type>Text</type>
</CustomField>