force-app/main/default/objects/Channel_Partner__c/fields/Primary_CP__c.field-meta.xml
<CustomField>
    <fullName>Primary_CP__c</fullName>
    <label>Primary CP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>