force-app/main/default/objects/Channel_Partner__c/fields/Primary_CP_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_CP_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary CP Name</label>
    <type>Checkbox</type>
</CustomField>