force-app/main/default/objects/Channel_Partner__c/fields/Qualified_Leads__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Leads__c</fullName>
    <label>Qualified Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>