force-app/main/default/objects/Channel_Partner__c/fields/Region_of_operation__c.field-meta.xml
<CustomField>
    <fullName>Region_of_operation__c</fullName>
    <label>Region of operation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>