force-app/main/default/objects/Channel_Partner__c/fields/RERA_Document_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>RERA_Document_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set to true once at least one RERA Certificate document has been uploaded for this Channel Partner.</inlineHelpText>
    <label>RERA Document Uploaded</label>
    <type>Checkbox</type>
</CustomField>