force-app/main/default/objects/Channel_Partner__c/fields/Revisit__c.field-meta.xml
<CustomField>
    <fullName>Revisit__c</fullName>
    <label>Revisit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>