force-app/main/default/objects/Channel_Partner__c/fields/Select_Region__c.field-meta.xml
<CustomField>
    <fullName>Select_Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Telangana</fullName>
            </value>
            <value>
                <fullName>A Nagar</fullName>
            </value>
            <value>
                <fullName>Aasavari Clinic Khambla</fullName>
            </value>
            <value>
                <fullName>Abohar</fullName>
            </value>
            <value>
                <fullName>Adilabad</fullName>
            </value>
            <value>
                <fullName>Agar Malwa</fullName>
            </value>
            <value>
                <fullName>Agartala</fullName>
            </value>
            <value>
                <fullName>Agra</fullName>
            </value>
            <value>
                <fullName>Ahmedabad</fullName>
            </value>
            <value>
                <fullName>Ahmednagar</fullName>
            </value>
            <value>
                <fullName>Aizawl</fullName>
            </value>
            <value>
                <fullName>Ajani Square</fullName>
            </value>
            <value>
                <fullName>Ajmer</fullName>
            </value>
            <value>
                <fullName>Akbar Pur</fullName>
            </value>
            <value>
                <fullName>Akhnoor</fullName>
            </value>
            <value>
                <fullName>Akluj</fullName>
            </value>
            <value>
                <fullName>Akola</fullName>
            </value>
            <value>
                <fullName>Alappuzha</fullName>
            </value>
            <value>
                <fullName>Alasi Plot</fullName>
            </value>
            <value>
                <fullName>Alexis Hospital</fullName>
            </value>
            <value>
                <fullName>Alexis Hospital Nagpur</fullName>
            </value>
            <value>
                <fullName>Aligarh</fullName>
            </value>
            <value>
                <fullName>Alipurduar</fullName>
            </value>
            <value>
                <fullName>Alirajpur</fullName>
            </value>
            <value>
                <fullName>Almora</fullName>
            </value>
            <value>
                <fullName>Alwar</fullName>
            </value>
            <value>
                <fullName>Ambala</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>