force-app/main/default/objects/Channel_Partner__c/fields/Sourcing_RM__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sourcing RM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Channel_PartnerSRM</relationshipName>
    <type>Lookup</type>
</CustomField>