force-app/main/default/objects/Channel_Partner__c/fields/Status_of_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Status_of_Agreement__c</fullName>
    <label>Status of Agreement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>