force-app/main/default/objects/Channel_Partner__c/fields/Training_Section__c.field-meta.xml
<CustomField>
    <fullName>Training_Section__c</fullName>
    <label>Training Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>