force-app/main/default/objects/Channel_Partner__c/fields/Type_of_CP__c.field-meta.xml
<CustomField>
    <fullName>Type_of_CP__c</fullName>
    <label>Type of CP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>