force-app/main/default/objects/Channel_Partner__c/fields/Virtual_Meet__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Meet__c</fullName>
    <label>Virtual Meet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>