force-app/main/default/objects/Channel_Partner__c/fields/Working_with_investor_of_more_than_5Cr__c.field-meta.xml
<CustomField>
    <fullName>Working_with_investor_of_more_than_5Cr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Working with investor of more than 5Cr</label>
    <type>Checkbox</type>
</CustomField>