force-app/main/default/objects/Channel_Partner__c/fields/Zuari_RM_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Zuari_RM_Email_ID__c</fullName>
    <label>Zuari RM Email ID</label>
    <type>Email</type>
</CustomField>