force-app/main/default/objects/Channel_Partner__c/fields/Zuari_RM_Name__c.field-meta.xml
<CustomField>
    <fullName>Zuari_RM_Name__c</fullName>
    <label>Zuari RM Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>