force-app/main/default/objects/Channel_Partner__c/validationRules/PAN_No_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PAN_No_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
NOT(ISBLANK(PAN_Card_No__c)) &amp;&amp;
NOT(REGEX(PAN_Card_No__c ,
        &quot;^[A-Z]{5}[0-9]{4}[A-Z]{1}$&quot;)),

NOT(ISBLANK(Company_PAN_Card_No__c)) &amp;&amp;
NOT(REGEX(Company_PAN_Card_No__c ,
        &quot;^[A-Z]{5}[0-9]{4}[A-Z]{1}$&quot;))
)</errorConditionFormula>
    <errorMessage>Enter a valid PAN number (Format: ABCDE1234F).</errorMessage>
</ValidationRule>