force-app/main/default/objects/Channel_Partner__c/validationRules/Phone_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
NOT(ISBLANK(Company_Head_Contact_No__c)) &amp;&amp;
NOT(REGEX(Company_Head_Contact_No__c, &quot;^[0-9]{10}$&quot;)),

NOT(ISBLANK(Company_Owner_Contact_No__c)) &amp;&amp;
NOT(REGEX(Company_Owner_Contact_No__c, &quot;^[0-9]{10}$&quot;))
)</errorConditionFormula>
    <errorMessage>Enter a valid 10-digit Contact number.</errorMessage>
</ValidationRule>