force-app/main/default/objects/Channel_Partner__c/listViews/All_Channel_Partners.listView-meta.xml
<ListView>
    <fullName>All_Channel_Partners</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Select_Region__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Active__c</columns>
    <columns>Approval_Date__c</columns>
    <columns>Sourcing_RM__c</columns>
    <columns>Last_Logged_Time__c</columns>
    <columns>Training_Completed__c</columns>
    <columns>No_of_EOI__c</columns>
    <columns>No_Of_Enquries__c</columns>
    <columns>No_of_Completed_Site_Visit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Select_Region__c</field>
        <operation>contains</operation>
        <value>Bangalore,Hyderabad</value>
    </filters>
    <label>All Channel Partners</label>
</ListView>